--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
        
-		<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/styles.css">
+
    </head>
    
    <body>
    	<a href="projects/p2/index.html">
-INTERVIEW PROJECT
+      <h1>INTERVIEW PROJECT</h1>
    	</a>
 
    </body>
