--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link rel="stylesheet" href="css/styles.css">
 
    </head>
-   
+   <center>
    <body>
    	<a href="projects/p2/index.html">
       <h1>INTERVIEW PROJECT</h1>
    	</a>
-
+</center>
    </body>
    </html>
