--- a/index.html
+++ b/index.html
@@ -9,11 +9,26 @@
 <link rel="stylesheet" href="css/styles.css">
 
    </head>
-   <center>
+   
+
+<center>
    <body>
    	<a href="projects/p2/index.html">
       <h1>INTERVIEW PROJECT</h1>
    	</a>
 </center>
+
+<p>
+<center>
+   <body>
+    <a href="projects/p3/index.html">
+      <h1>DIGITAL QUILT</h1>
+    </a>
+</center>
+</p>
+
+
+
+
    </body>
    </html>
