--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
     <a href="projects/p3/index.html">
       <h1>DIGITAL QUILT</h1>
     </a>
-</center>
+
+</p>
+ 
+<a href="https://marvelapp.com/aj48g5"> <h1>MODERN COMFORT (DESKTOP) </h1></a>
+<p>
+<a href="https://marvelapp.com/ajj7a6"> <h1> MODERN COMFORT (MOBILE) </h1> </a>
+</p>
+<p>
+<a href="https://marvelapp.com/296b9i9"> <h1> MODERN COMFORT (TABLET) </h1> </a>
 </p>
 
-
-
+</center>
 
    </body>
    </html>
