--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <a href="https://marvelapp.com/296b9i9"> <h1> MODERN COMFORT (TABLET) </h1> </a>
 </p>
 
+<a href="projects/p6/index.html"> <h1> CONCRETE POETRY </h1></a>
+
 </center>
 
    </body>
