--- a/projects/p6/index.html
+++ b/projects/p6/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Shel Silverstien</title>
+        <title>Project 4</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
        
