--- a/projects/p6/index.html
+++ b/projects/p6/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Project 4</title>
+        <title>Henry Brentlinger - P4</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
        
@@ -49,7 +49,6 @@
         <div class="dull"> DULL. </div>
 
 
-  
        
         <div class="somebody2"> SOMEBODY </div>
 
@@ -153,9 +152,7 @@
 
         <dic class="starlink"> </div>
 
-                  <a href="poem.html">*</a>
-
-
+            <a href="poem.html">*</a>
 
 </div>
 
